INCLUDES = -I./include/ -I../include/ 

bin_PROGRAMS = zulu

zulu_SOURCES = zulu.c \
               main.c \
               analyzer.c \
               socklib.c \
               llist.c \
               wlaninfo.c \
               iwcontrol.c \
               analyzer.h \
               zulu.h \
               p80211.h \
               socklib.h \
               wlaninfo.h \
               macros.h \
               llist.h \
               tx80211.h \
               tx80211_packet.h \
               iwcontrol.h

zulu_LDADD = -lm
