#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([llist.c])
AC_CONFIG_HEADER([config.h])
# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h sys/ioctl.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([alarm bzero memset select socket])

AC_ARG_ENABLE(prism,
[ --enable-prism            If using the prism drivers enable this option to correctly pad frames.],
AC_DEFINE(PRISM,"1",[If using the prism drivers enable this option to correctly pad frames.]))
AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE()
AC_OUTPUT
